--- a/Primeiros passos (CSS3)/016 - Psicologia das cores/coresemcss.html
+++ b/Primeiros passos (CSS3)/016 - Psicologia das cores/coresemcss.html
@@ -7,11 +7,15 @@
     <title>Cores em CSS3</title>
 </head>
 <body>
-    <h2 style="background-color: blue; color: white;">EXEMPLO DE CORES</h2>
+    <h1>Formas de representar cores</h1>
+    <!--Representação por nome-->
+    <h2 style="background-color: blue; color: white;">Representar por nome da cor </h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In, repellat nostrum dolor corrupti mollitia exercitationem, iure explicabo, esse assumenda autem odit earum! Voluptate debitis rem animi inventore? Consequuntur, placeat! Eos.</p>
-    <h2>EXEMPLO DE CORES</h2>
+    <!--Representação por Codigos hexadecimais-->
+    <h2 style="background-color: #000fff; color: #ffffff;">Representação hexadecimal</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In, repellat nostrum dolor corrupti mollitia exercitationem, iure explicabo, esse assumenda autem odit earum! Voluptate debitis rem animi inventore? Consequuntur, placeat! Eos.</p>
-    <h2>EXEMPLO DE CORES</h2>
+    <!--Representação por RGB-->
+    <h2>Representação por RGB</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In, repellat nostrum dolor corrupti mollitia exercitationem, iure explicabo, esse assumenda autem odit earum! Voluptate debitis rem animi inventore? Consequuntur, placeat! Eos.</p>
 </body>
 </html>
