--- a/Primeiros passos (CSS3)/016 - Psicologia das cores/coresemcss.html
+++ b/Primeiros passos (CSS3)/016 - Psicologia das cores/coresemcss.html
@@ -15,7 +15,8 @@
     <h2 style="background-color: #000fff; color: #ffffff;">Representação hexadecimal</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In, repellat nostrum dolor corrupti mollitia exercitationem, iure explicabo, esse assumenda autem odit earum! Voluptate debitis rem animi inventore? Consequuntur, placeat! Eos.</p>
     <!--Representação por RGB-->
-    <h2>Representação por RGB</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In, repellat nostrum dolor corrupti mollitia exercitationem, iure explicabo, esse assumenda autem odit earum! Voluptate debitis rem animi inventore? Consequuntur, placeat! Eos.</p>
+    <h2 style="background-color: rgb(000,000,255);">Representação por RGB</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In, repellat nostrum dolor corrupti mollitia exercitationem, iure explicabo, esse assumenda autem odit earum! Voluptate debitis rem animi inventore? Consequuntur, placeat! Eos.</p>7
+    <h2></h2>
 </body>
 </html>
