--- a/Primeiros passos (CSS3)/016 - Psicologia das cores/coresemcss.html
+++ b/Primeiros passos (CSS3)/016 - Psicologia das cores/coresemcss.html
@@ -17,6 +17,7 @@
     <!--Representação por RGB-->
     <h2 style="background-color: rgb(000,000,255);">Representação por RGB</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In, repellat nostrum dolor corrupti mollitia exercitationem, iure explicabo, esse assumenda autem odit earum! Voluptate debitis rem animi inventore? Consequuntur, placeat! Eos.</p>7
-    <h2></h2>
+    <h2 style="background-color: hsl(hue, saturation, lightness);"> Representação por HSL (hue, saturation, luminosity</h2>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid blanditiis quisquam modi libero. Laborum, quasi at impedit sequi aliquid dicta eligendi, ipsum cupiditate unde, iure repellendus fugiat possimus porro illo.</p>
 </body>
 </html>
