--- a/Primeiros passos (CSS3)/016 - Psicologia das cores/coresemcss.html
+++ b/Primeiros passos (CSS3)/016 - Psicologia das cores/coresemcss.html
@@ -11,15 +11,17 @@
     <!--Representação por nome-->
     <h2 style="background-color: blue; color: white;">Representar por nome da cor </h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In, repellat nostrum dolor corrupti mollitia exercitationem, iure explicabo, esse assumenda autem odit earum! Voluptate debitis rem animi inventore? Consequuntur, placeat! Eos.</p>
-    
+
     <!--Representação por Codigos hexadecimais-->
     <h2 style="background-color: #000fff; color: #ffffff;">Representação hexadecimal</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In, repellat nostrum dolor corrupti mollitia exercitationem, iure explicabo, esse assumenda autem odit earum! Voluptate debitis rem animi inventore? Consequuntur, placeat! Eos.</p>
+
     <!--Representação por RGB-->
-    <h2 style="background-color: rgb(000,000,255);">Representação por RGB</h2>
+    <h2 style="background-color: rgb(000,000,255); color: rgb(250,250, 250);">Representação por RGB</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In, repellat nostrum dolor corrupti mollitia exercitationem, iure explicabo, esse assumenda autem odit earum! Voluptate debitis rem animi inventore? Consequuntur, placeat! Eos.</p>
+
     <!--Representação por HSL (hue, saturation, luminosity-->
-    <h2 style="background-color: hsl(250, 100%, 50%); color: hsl(100, 100, 100);" > Representação por HSL (hue, saturation, luminosity)</h2>
+    <h2 style="background-color: hsl(250, 100%, 50%); color: hsl(100, 100%, 100%);" > Representação por HSL (hue, saturation, luminosity)</h2>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid blanditiis quisquam modi libero. Laborum, quasi at impedit sequi aliquid dicta eligendi, ipsum cupiditate unde, iure repellendus fugiat possimus porro illo.</p>
 </body>
 </html>
