--- a/Primeiros passos (HTML)/Desafios/d001/d01.html
+++ b/Primeiros passos (HTML)/Desafios/d001/d01.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1 style="background-color: gray; text-align: center;">Ola a todos meu nome é José Ruan</h1>
-    <p style="font-family: 'Times New Roman', Times, serif; color: darkslategrey;">Atuamente estou fazendo o curso de Ciência e tecnologia com enfase em engenharia da computação</p>
+    <h2 style="font-family: 'Times New Roman', Times, serif; color: darkslategrey;">Atuamente estou fazendo o curso de Ciência e tecnologia com enfase em engenharia da computação</h2>
     <p>As linguagens que atualmente estou apredendo são: </p>
     <ul>
         <li><abbr title="Linguagem de marcação de texto"> HTML </Html></abbr></li>
