--- a/Primeiros passos (HTML)/Desafios/d002/d002.html
+++ b/Primeiros passos (HTML)/Desafios/d002/d002.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site de videos legais</title>
 </head>
-<body>
+<body style="background-color: gray;">
     <h1>Albuns do Guns N' Roses</h1>
     
     <a href="pagina2/pagina2.html" rel="next" target="_blank"> <img width="220"  src="imagens/Use-Your-Illusion-I-94244157.jpg" alt="1 album" > </a>
