--- a/Primeiros passos (HTML)/Desafios/d002/d002.html
+++ b/Primeiros passos (HTML)/Desafios/d002/d002.html
@@ -7,7 +7,7 @@
     <title>Site de videos legais</title>
 </head>
 <body style="background-color: gray;">
-    <h1 style="font-family: 'Times New Roman', Times, serif;">Albuns do Guns N' Roses</h1>
+    <h1 style="font-family: 'Times New Roman', Times, serif;color: rgb(253, 231, 31);" >Albuns do Guns N' Roses</h1>
     
     <a href="pagina2/pagina2.html" rel="next" target="_blank"> <img width="220"  src="imagens/Use-Your-Illusion-I-94244157.jpg" alt="1 album" > </a>
 
