--- a/Primeiros passos (CSS3)/016 - Psicologia das cores/criandopaleta.html
+++ b/Primeiros passos (CSS3)/016 - Psicologia das cores/criandopaleta.html
@@ -7,9 +7,10 @@
     <title>Cores</title>
 </head>
 <body>
-    <h1>FERRAMENTAS QUE EIRAM AJUDAR A CRIA UMA PALETAA DE CORES</h1>
+    <h1>FERRAMENTAS QUE IRAM AJUDAR A CRIA UMA PALETAA DE CORES</h1>
     <UL>
         <LI> O site do adobe, clique <a href="http://color.adobe.com">Aqui</a></LI>
+        <li> O site Paleton, <a href="http://paleton.com">clique aqui</a> ele simula um site com uma paleta de cores</li>
     </UL>
 </body>
 </html>
