--- a/Primeiros passos (CSS3)/016 - Psicologia das cores/criandopaleta.html
+++ b/Primeiros passos (CSS3)/016 - Psicologia das cores/criandopaleta.html
@@ -10,7 +10,7 @@
     <h1>FERRAMENTAS QUE IRAM AJUDAR A CRIA UMA PALETAA DE CORES</h1>
     <UL>
         <LI> O site do adobe, clique <a href="http://color.adobe.com">Aqui</a></LI>
-        <li> O site Paleton, <a href="http://paleton.com">clique aqui</a> ele simula um site com uma paleta de cores</li>
+        <li> O site Paletton, <a href="http://paletton.com">clique aqui</a> ele simula um site com uma paleta de cores</li>
     </UL>
 </body>
 </html>
