--- a/Primeiros passos (CSS3)/016 - Psicologia das cores/criandopaleta.html
+++ b/Primeiros passos (CSS3)/016 - Psicologia das cores/criandopaleta.html
@@ -12,7 +12,7 @@
         <h2>
             <LI> O site do adobe, clique <a href="http://color.adobe.com">Aqui</a></LI>
         </h2>
-        <li> O site Paletton, <a href="http://paletton.com">clique aqui</a> ele simula um site com uma paleta de cores</li>
+        <h2><li> O site Paletton, <a href="http://paletton.com">clique aqui</a> ele simula um site com uma paleta de cores</li></h2>
     </UL>
 </body>
 </html>
