--- a/Primeiros passos (CSS3)/016 - Psicologia das cores/harmonycolors.html
+++ b/Primeiros passos (CSS3)/016 - Psicologia das cores/harmonycolors.html
@@ -9,8 +9,9 @@
 <body>
     <h1>Harmonia das cores</h1>
     <h2>O circulo cromático contém todas as cores <br> primeiro vamos entender suas divisões:</h2>
+    <h2>Tipos de cores:</h2>
     <ol>
-        <h2>Tipos de Cores</h2>
+        <li>Cores primárias: Amarelo,  azul e vermelho</li>
     </ol>   
 </body>
 </html>
