--- a/Primeiros passos (CSS3)/016 - Psicologia das cores/harmonycolors.html
+++ b/Primeiros passos (CSS3)/016 - Psicologia das cores/harmonycolors.html
@@ -11,7 +11,8 @@
     <h2>O circulo cromático contém todas as cores <br> primeiro vamos entender suas divisões:</h2>
     <h2>Tipos de cores:</h2>
     <ol>
-        <li>Cores primárias: Amarelo,  azul e vermelho</li>
+        <li>Cores primárias: Amarelo, azul e vermelho</li>
+        <li>Cores Secundárias </li>
     </ol>   
 </body>
 </html>
