--- a/Primeiros passos (CSS3)/016 - Psicologia das cores/harmonycolors.html
+++ b/Primeiros passos (CSS3)/016 - Psicologia das cores/harmonycolors.html
@@ -9,10 +9,11 @@
 <body>
     <h1>Harmonia das cores</h1>
     <h2>O circulo cromático contém todas as cores <br> primeiro vamos entender suas divisões:</h2>
-    <h2>Tipos de cores:</h2>
+    <h2>1.Tipos de cores:</h2>
     <ol>
         <li>Cores primárias: Amarelo, azul e vermelho</li>
-        <li>Cores Secundárias </li>
+        <li>Cores Secundárias: Laranja, violeta e verde </li>
+        <li>Cores terciarias: mistura das Secundárias com primárias. <br> Exemplos. Amarelo-alaranjado, vermelho alaranjado, vermelho aroxeado, azul-arroxeado, azul-esverdeado - são os tons pasteis</li>
     </ol>   
 </body>
 </html>
