--- a/Primeiros passos (CSS3)/016 - Psicologia das cores/harmonycolors.html
+++ b/Primeiros passos (CSS3)/016 - Psicologia das cores/harmonycolors.html
@@ -13,7 +13,12 @@
     <ol>
         <li>Cores primárias: Amarelo, azul e vermelho</li>
         <li>Cores Secundárias: Laranja, violeta e verde </li>
-        <li>Cores terciarias: mistura das Secundárias com primárias. Exemplos. Amarelo-alaranjado, vermelho alaranjado, vermelho aroxeado, azul-arroxeado, azul-esverdeado</li>
-    </ol>   
+        <li>Cores terciarias: mistura das Secundárias com primárias. Exemplos. Amarelo-alaranjado, vermelho alaranjado, vermelho aroxeado, azul-arroxeado, azul-esverdeado - semelhantes a cores past</li>
+    </ol>
+    <h2>Cores complemetares:</h2>
+    <h2>Cores analogas:</h2>
+    <h2></h2>
+
+
 </body>
 </html>
