--- a/Primeiros passos (CSS3)/016 - Psicologia das cores/harmonycolors.html
+++ b/Primeiros passos (CSS3)/016 - Psicologia das cores/harmonycolors.html
@@ -15,9 +15,18 @@
         <li>Cores Secundárias: Laranja, violeta e verde </li>
         <li>Cores terciarias: mistura das Secundárias com primárias. Exemplos. Amarelo-alaranjado, vermelho alaranjado, vermelho aroxeado, azul-arroxeado, azul-esverdeado - semelhantes a cores past</li>
     </ol>
-    <h2>Cores complemetares:</h2>
-    <h2>Cores analogas:</h2>
-    <h2></h2>
+    <h2>Cores complemetares: cores opostas</h2>
+    <h2>Cores analogas: cores vizinhas</h2>
+    <h2>Modelos de paletas</h2>
+    <ol>
+        <li>Cores análogas e complemetares</li>
+        <li>Cores analogas relacionadas</li>
+        <li>Cores intercaladas</li>
+        <li>Cores triádicas</li>
+        <li>cores em quadrado</li>
+        <li>Cores tetrádicas </li>
+        <li>monocromia</li>
+    </ol>
 
 
 </body>
