--- a/Primeiros passos (CSS3)/016 - Psicologia das cores/harmonycolors.html
+++ b/Primeiros passos (CSS3)/016 - Psicologia das cores/harmonycolors.html
@@ -4,7 +4,7 @@
     <meta charset="pt-br">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Harmony of Colors</title>
+    <title> <strong>Harmony of Colors</strong></title>
 </head>
 <body>
     <h1>Harmonia das cores</h1>
