--- a/Primeiros passos (CSS3)/016 - Psicologia das cores/criandopaleta.html
+++ b/Primeiros passos (CSS3)/016 - Psicologia das cores/criandopaleta.html
@@ -11,6 +11,7 @@
     <UL>
         <h3><LI> O site do adobe, clique <a href="http://color.adobe.com">Aqui</a></LI></h3>
         <h3><li> O site Paletton, <a href="http://paletton.com">clique aqui</a> ele simula um site com uma paleta de cores</li></h3>
+        <h3> O Site Collors</h3>
     </UL>
 </body>
 </html>
