--- a/Primeiros passos (CSS3)/016 - Psicologia das cores/degrade.html
+++ b/Primeiros passos (CSS3)/016 - Psicologia das cores/degrade.html
@@ -11,7 +11,7 @@
         }
         body {
             background-image: radial-gradient(circle, #7F3CB1, #C12D78,#D02158, #F9060E,#F9A401  ) ;
-            backgr
+            background-attachment: fixed;
 
         }
     </style>
