--- a/Primeiros passos (CSS3)/016 - Psicologia das cores/degrade.html
+++ b/Primeiros passos (CSS3)/016 - Psicologia das cores/degrade.html
@@ -10,7 +10,7 @@
             height: 100%;
         }
         body {
-            background-image: linear-gradient(45deg, #7F3CB1, #C12D78,#D02158, #F9060E,#F9A401  ) ;
+            background-image: linear-gradient(to left, #7F3CB1, #C12D78,#D02158, #F9060E,#F9A401) ;
             background-attachment: fixed;
 
         }
