--- a/Primeiros passos (CSS3)/016 - Psicologia das cores/degrade.html
+++ b/Primeiros passos (CSS3)/016 - Psicologia das cores/degrade.html
@@ -17,7 +17,7 @@
     </style>
 </head>
 <body>
-    <h1>Testando Gradiente</h1>
+    <h1 style="text-align: center;"> Testando Gradiente</h1>
     
 </body>
 </html>
