--- a/Primeiros passos (CSS3)/017 - tipografia/fonte01.html
+++ b/Primeiros passos (CSS3)/017 - tipografia/fonte01.html
@@ -5,11 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fontes em CSS</title>
+    <style></style>
 </head>
-<body>
+<body >
     <h1> Trabalhando com Fontes</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum optio maiores eum porro reprehenderit pariatur perspiciatis sunt ab a odit voluptatum, quo quae cum, velit dicta molestiae. Ipsam, dolores ad?</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium reiciendis aliquid beatae voluptatibus eum autem recusandae nihil dolorem laboriosam, molestiae illum perspiciatis nam earum harum nesciunt cum possimus maiores minus.</p>
+    <h2>Subtitulo</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat fugit obcaecati distinctio eius temporibus sequi, ut voluptates, velit blanditiis non similique, numquam ad dicta doloribus magni! Nisi recusandae ab nemo.</p>
     
 </body>
 </html>
