--- a/Primeiros passos (CSS3)/017 - tipografia/fonte01.html
+++ b/Primeiros passos (CSS3)/017 - tipografia/fonte01.html
@@ -5,7 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fontes em CSS</title>
-    <style></style>
+    <style>
+        body{
+            font-family: 'Courier New', Courier, monospace;
+
+        }
+    </style>
 </head>
 <body >
     <h1> Trabalhando com Fontes</h1>
