--- a/Primeiros passos (CSS3)/017 - tipografia/fonte01.html
+++ b/Primeiros passos (CSS3)/017 - tipografia/fonte01.html
@@ -7,7 +7,7 @@
     <title>Fontes em CSS</title>
     <style>
         body{
-            font-family: 'Courier New', Courier, monospace;
+            font-family: Arial, Helvetica, sans-serif;
 
         }
     </style>
@@ -18,6 +18,9 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium reiciendis aliquid beatae voluptatibus eum autem recusandae nihil dolorem laboriosam, molestiae illum perspiciatis nam earum harum nesciunt cum possimus maiores minus.</p>
     <h2>Subtitulo</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat fugit obcaecati distinctio eius temporibus sequi, ut voluptates, velit blanditiis non similique, numquam ad dicta doloribus magni! Nisi recusandae ab nemo.</p>
+
+    <h4>Observação de aula:</h4>
+    <p>Site para encontrar combinações de fontes <a href="https://www.w3schools.com/cssref/css_websafe_fonts.asp" target="_blank" rel="external">https://www.w3schools.com/cssref/css_websafe_fonts.asp</a></p>
     
 </body>
 </html>
