--- a/Primeiros passos (CSS3)/017 - tipografia/fonte01.html
+++ b/Primeiros passos (CSS3)/017 - tipografia/fonte01.html
@@ -8,6 +8,15 @@
     <style>
         body{
             font-family: Arial, Helvetica, sans-serif;
+        /* 
+            Medidas Absolutas:
+            cm, mm, in, px, pt, pc
+
+            Medidas Relativas:
+            em, ex, rem, vw, vh, %
+            */        
+            
+            font-size: 16px ;
 
         }
     </style>
