--- a/Primeiros passos (CSS3)/017 - tipografia/fonte01.html
+++ b/Primeiros passos (CSS3)/017 - tipografia/fonte01.html
@@ -9,6 +9,8 @@
         body{
             font-family: Arial, Helvetica, sans-serif;
             font-size: 16pt ;
+            background-image: (to right, #42708C, #77B3D9 );
+}
             /* 
             Medidas Absolutas:
             cm, mm, in, px, pt, pc
@@ -19,7 +21,7 @@
 
             (é melhor utilizar px ou em, de preferencia o em)
             */                    
-        }
+        
         h1{
             /* Shothand para font - simplificar cod
             font-style -> font-weigth -> font-size -> font-family
