--- a/Primeiros passos (CSS3)/017 - tipografia/fonte01.html
+++ b/Primeiros passos (CSS3)/017 - tipografia/fonte01.html
@@ -14,6 +14,7 @@
         }
         main{
             background-color: rgb(219, 209, 209);
+            width: 600px;
         }
             
             /* 
