--- a/Primeiros passos (CSS3)/017 - tipografia/fonte.02.html
+++ b/Primeiros passos (CSS3)/017 - tipografia/fonte.02.html
@@ -6,18 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FONTES COM GOOOGLE Fontes</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
+
+        @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
         body {
-            font-family: Arial, Helvetica, sans-serif;
+            font-family: 'Work Sans', sans-serif;
             font-size: 16px;
             color: black;
         }
         h1{
-            font-family: 'Times New Roman', Times, serif;
+            font-family: 'Indie Flower', cursive;
+            font-size: 3em;
         }
     </style>
 </head>
 <body>
     <H1>Título 1 </H1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At harum consequuntur omnis maxime laudantium quia. Quas esse unde consequatur similique harum accusamus nulla voluptatem deserunt natus omnis, optio minima culpa?</p>
+    <h2>Obs: nesse exemplo utilizamos o google fontes para adicionar outros tipos de fontes.</h2>
+    <p><a href="http://fonts.google.com" target="_blank" rel="external">Clique aqui para ir para o site do google fonte</a></p>
 </body>
 </html>
