--- a/Primeiros passos (CSS3)/017 - tipografia/fonte.02.html
+++ b/Primeiros passos (CSS3)/017 - tipografia/fonte.02.html
@@ -9,6 +9,8 @@
         @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
 
         @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+        /*os codigos acima são para importação de fontes*/
         body {
             font-family: 'Work Sans', sans-serif;
             font-size: 16px;
@@ -18,12 +20,18 @@
             font-family: 'Indie Flower', cursive;
             font-size: 3em;
         }
+        h2{
+            font-family:  'Indie Flower', cursive, sans-serif ;
+            font-size: 2em;
+        }
     </style>
 </head>
 <body>
     <H1>Título 1 </H1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est eius iusto ipsum. Corrupti et vel impedit velit. Nisi iure voluptatum architecto dolores ipsam debitis commodi odit expedita laboriosam, earum tenetur.</p>
+    <h2>Subtitulo</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At harum consequuntur omnis maxime laudantium quia. Quas esse unde consequatur similique harum accusamus nulla voluptatem deserunt natus omnis, optio minima culpa?</p>
-    <h2>Obs: nesse exemplo utilizamos o google fontes para adicionar outros tipos de fontes.</h2>
+    <h3>Obs: nesse exemplo utilizamos o google fontes para adicionar outros tipos de fontes.</h3>
     <p><a href="http://fonts.google.com" target="_blank" rel="external">Clique aqui para ir para o site do google fonte</a></p>
 </body>
 </html>
