--- a/Primeiros passos (CSS3)/017 - tipografia/fonte.02.html
+++ b/Primeiros passos (CSS3)/017 - tipografia/fonte.02.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FONTES COM GOOOGLE Fontes</title>
+    <title>FONTES COM GOOOGLE Fonts</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
 
@@ -32,6 +32,6 @@
     <h2>Subtitulo</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At harum consequuntur omnis maxime laudantium quia. Quas esse unde consequatur similique harum accusamus nulla voluptatem deserunt natus omnis, optio minima culpa?</p>
     <h3>Obs: nesse exemplo utilizamos o google fontes para adicionar outros tipos de fontes.</h3>
-    <p><a href="http://fonts.google.com" target="_blank" rel="external">Clique aqui para ir para o site do google fonte</a></p>
+    <p><a href="http://fonts.google.com" target="_blank" rel="external">Clique aqui para ir para o site do google fonts</a></p>
 </body>
 </html>
