--- a/Primeiros passos (CSS3)/017 - tipografia/fonte03.html
+++ b/Primeiros passos (CSS3)/017 - tipografia/fonte03.html
@@ -8,7 +8,7 @@
     <style>
         @font-face {
             font-family: '';
-            src: url('Gimme\ Danger.ttf') format('ttf');
+            src: url('Gimme\ Danger.ttf') format();
             font-weight: normal;
             font-style: italic;
         }
@@ -32,6 +32,8 @@
     <h1>Título</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam suscipit, voluptatem necessitatibus tempore odio dolorem fuga quis tempora. Incidunt reprehenderit labore suscipit, magni est ullam fuga accusamus numquam voluptates nihil.</p>
 
-    <h3>obs: </h3>
+    <p>obs:nessa aula foi recomendado uma extensão chamada ninjas fonts - ela detecta a fonte da pagina de um site.
+    </p>
+    <p>Detectando uma fonte de imagem:</p>
 </body>
 </html>
