--- a/Primeiros passos (CSS3)/017 - tipografia/fonte03.html
+++ b/Primeiros passos (CSS3)/017 - tipografia/fonte03.html
@@ -21,10 +21,13 @@
 
             
             */
-        
+        h1{
+            text-align: center;
+
+        }
         body{
             font-family: '', 'Times New Roman', Times, serif;
-            font-size: 2em;
+            font-size: 1.5em;
         }
     </style>
 </head>
