--- a/Primeiros passos (CSS3)/017 - tipografia/fonte03.html
+++ b/Primeiros passos (CSS3)/017 - tipografia/fonte03.html
@@ -37,6 +37,10 @@
 
     <p>obs:nessa aula foi recomendado uma extensão chamada ninjas fonts - ela detecta a fonte da pagina de um site.
     </p>
-    <p>Detectando uma fonte de imagem:</p>
+    <p>Detectando uma fonte de imagem:
+        <ul>
+            <li></li>
+        </ul>
+    </p>
 </body>
 </html>
