--- a/Primeiros passos (CSS3)/017 - tipografia/fonte03.html
+++ b/Primeiros passos (CSS3)/017 - tipografia/fonte03.html
@@ -37,9 +37,11 @@
 
     <p>obs:nessa aula foi recomendado uma extensão chamada ninjas fonts - ela detecta a fonte da pagina de um site.
     </p>
-    <p>Detectando uma fonte de imagem:
+    <p>Detectando uma fonte de imagem: esses são os sites:
         <ul>
-            <li></li>
+            <li>whatfont ls</li>
+            <li>Font Squirrel</li>
+            <li>My fonts</li>
         </ul>
     </p>
 </body>
