--- a/Primeiros passos (CSS3)/017 - tipografia/fonte04alinhamento.html
+++ b/Primeiros passos (CSS3)/017 - tipografia/fonte04alinhamento.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ALINHAMENTOS</title>
+    <style>
+        h1{
+            text-align: central;
+        }
+        h2{
+            text-align: left;
+        }
+    </style>
 </head>
 <body>
+    <h1>TIPOS DE ALINHAMENTOS</h1>
+    <ul>
+        <li>central</li>
+        <li>a esquerdar</li>
+        <li>a direita</li>
+        <li>justificado</li>
+    </ul>
+    <H2>SUBTITULO</H2>
+    <h3>Texto a esquefda</h3>
+    <p>Central</p>
+    <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum illum natus voluptatibus dolorem! Aliquam quia, maxime consequuntur totam, eligendi praesentium perspiciatis consequatur autem perferendis sequi neque doloremque! Nobis, perspiciatis? Sequi.</P>
     
 </body>
 </html>
