--- a/Primeiros passos (CSS3)/017 - tipografia/fonte04alinhamento.html
+++ b/Primeiros passos (CSS3)/017 - tipografia/fonte04alinhamento.html
@@ -7,10 +7,13 @@
     <title>ALINHAMENTOS</title>
     <style>
         h1{
-            text-align: central;
+            text-align: central; /* codigo para deixar texto centralizado*/
         }
         h2{
-            text-align: left;
+            text-align: left; /* codigo para deixar texto a */
+        }
+        p{
+            text-align: justify;
         }
     </style>
 </head>
