--- a/Primeiros passos (CSS3)/017 - tipografia/fonte04alinhamento.html
+++ b/Primeiros passos (CSS3)/017 - tipografia/fonte04alinhamento.html
@@ -10,10 +10,14 @@
             text-align: central; /* codigo para deixar texto centralizado*/
         }
         h2{
-            text-align: left; /* codigo para deixar texto a */
+            text-align: left; /* codigo para deixar texto a esquerda */
+        }
+        h4{
+            text-align: right;
         }
         p{
-            text-align: justify;
+            text-align: justify; /*texto justificado*/
+            text-indent: 20px ; /* espaço inicial de paragrafo*/
         }
     </style>
 </head>
@@ -26,9 +30,10 @@
         <li>justificado</li>
     </ul>
     <H2>SUBTITULO</H2>
-    <h3>Texto a esquefda</h3>
-    <p>Central</p>
+    <h3>Texto a esquerda</h3>
+    <h4>texto  a direita</h4>
     <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum illum natus voluptatibus dolorem! Aliquam quia, maxime consequuntur totam, eligendi praesentium perspiciatis consequatur autem perferendis sequi neque doloremque! Nobis, perspiciatis? Sequi.</P>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius unde maxime commodi dolorem nostrum sint vitae. Repudiandae nihil eligendi doloremque? Ratione voluptas ipsam eius molestias optio labore ab eum corporis.</p>
     
 </body>
 </html>
