--- a/Primeiros passos (CSS3)/018 - Seletores personalizados/seletores01.html
+++ b/Primeiros passos (CSS3)/018 - Seletores personalizados/seletores01.html
@@ -8,7 +8,13 @@
 </head>
 <body>
     <H1>Criando sites com HTML E CSS</H1>
-    
-    
+    <h1>Aprendendo html</h1>
+    <h2>Html basico</h2>
+    <h2>Html intermediario</h2>
+    <h2>Html avançado</h2>
+    <h1>Aprendendo css</h1>
+    <h2>Css basico</h2>
+    <h2>Css intermediário</h2>
+    <h2>Css avançado</h2>    
 </body>
 </html>
