--- a/Primeiros passos (CSS3)/018 - Seletores personalizados/seletores01.html
+++ b/Primeiros passos (CSS3)/018 - Seletores personalizados/seletores01.html
@@ -5,13 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SELETORES</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <H1>Criando sites com HTML E CSS</H1>
+    <H1 id="Titulo">Criando sites com HTML E CSS</H1>
     <h1>Aprendendo html</h1>
     <h2>Html basico</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium voluptas facilis modi corrupti id dicta quam expedita. Officia dolore neque impedit reiciendis velit. Eos officiis iusto voluptatem suscipit assumenda ea.</p>
     <h2>Html intermediario</h2>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem impedit est voluptatum id suscipit labore, veniam numquam tenetur doloribus tempora officiis aperiam fuga deserunt. Neque vero praesentium iste ab magnam!
     <h2>Html avançado</h2>
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio tempore ullam omnis ab, aut enim dignissimos totam aspernatur vitae libero! Natus sapiente delectus explicabo adipisci nesciunt officia accusamus error magni.
     <h1>Aprendendo css</h1>
     <h2>Css basico</h2>
     <h2>Css intermediário</h2>
