--- a/Primeiros passos (CSS3)/018 - Seletores personalizados/seletores01.html
+++ b/Primeiros passos (CSS3)/018 - Seletores personalizados/seletores01.html
@@ -10,15 +10,17 @@
 <body>
     <H1 id="Titulo">Criando sites com HTML E CSS</H1>
     <h1>Aprendendo html</h1>
-    <h2>Html basico</h2>
+    <h2 class="Basico">Html basico</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium voluptas facilis modi corrupti id dicta quam expedita. Officia dolore neque impedit reiciendis velit. Eos officiis iusto voluptatem suscipit assumenda ea.</p>
-    <h2>Html intermediario</h2>
+    <h2 class="intermediario">Html intermediario</h2>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem impedit est voluptatum id suscipit labore, veniam numquam tenetur doloribus tempora officiis aperiam fuga deserunt. Neque vero praesentium iste ab magnam!
-    <h2>Html avançado</h2>
+    <h2 class="avancado">Html avançado</h2>
     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio tempore ullam omnis ab, aut enim dignissimos totam aspernatur vitae libero! Natus sapiente delectus explicabo adipisci nesciunt officia accusamus error magni.
     <h1>Aprendendo css</h1>
     <h2>Css basico</h2>
     <h2>Css intermediário</h2>
     <h2>Css avançado</h2>    
+    <p>Obs: Diferença entre id e class</p>
+    <p>Id é unico e class é multiplo</p>
 </body>
 </html>
