--- a/Primeiros passos (CSS3)/020 - pseudoclasses/pseudoclasses.html
+++ b/Primeiros passos (CSS3)/020 - pseudoclasses/pseudoclasses.html
@@ -6,11 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pseudo classes</title>
     <style>
+        div{
+            background-color: rgb(160, 158, 158);
+            width: 200px;
+            height: 300px;
+            text-align: center;
+            border: black solid;
+        }
 
     </style>
 </head>
 <body>
-    
+    <h1>
+        <div>HELLO WORLD</div> 
+    </h1><!--Div são partes de um documento-->
     
 </body>
 </html>
