--- a/Primeiros passos (CSS3)/020 - pseudoclasses/pseudoclasses.html
+++ b/Primeiros passos (CSS3)/020 - pseudoclasses/pseudoclasses.html
@@ -11,7 +11,12 @@
             width: 200px;
             height: 300px;
             text-align: center;
-            border: black solid;
+            border:  10px solid  black;
+            border-radius: 10px;
+        }
+
+        div:hover{
+            background-color: cadetblue;
         }
 
     </style>
@@ -20,6 +25,8 @@
     <h1>
         <div>HELLO WORLD</div> 
     </h1><!--Div são partes de um documento-->
+    <h2>Pseudo classes estão relacionandos ao estado de um determinado elemento.</h2>
+    <h2>No exemplo acima usamos ma pseudo classe chamada "hover" <br> para dar esse efeito ao passar pelo quadrado.</h2>
     
 </body>
 </html>
