--- a/Primeiros passos (CSS3)/020 - pseudoclasses/pseudoclasses.html
+++ b/Primeiros passos (CSS3)/020 - pseudoclasses/pseudoclasses.html
@@ -13,10 +13,13 @@
             text-align: center;
             border:  10px solid  black;
             border-radius: 10px;
+            margin-left: 400px;
+            
+            
         }
 
         div:hover{
-            background-color: cadetblue;
+            background-color: green;
         }
 
     </style>
