--- a/Primeiros passos (CSS3)/020 - pseudoclasses/pseudoclasses.html
+++ b/Primeiros passos (CSS3)/020 - pseudoclasses/pseudoclasses.html
@@ -10,7 +10,7 @@
             background-color: rgb(160, 158, 158);
             width: 200px;
             height: 350px;
-            text-align: center;
+            text-align: right;
             border:  10px solid  black;
             border-radius: 10px;
             margin-left: 400px;
