--- a/Primeiros passos (HTML)/001 - Paragrafos e Quebras de texto/001 - Paragrafos e quebras de linha.html
+++ b/Primeiros passos (HTML)/001 - Paragrafos e Quebras de texto/001 - Paragrafos e quebras de linha.html
@@ -8,7 +8,7 @@
     
 <body>
     <h1> Paragrafos e quebras de linhas </h1>
-    <hr>
+    <hr> <!--quebraq de linhna -->
     <p>Se você quiser escrever um parágrafo voce pode usar as tags: <br> &lt;p&gt; e &lt;/p&gt;. <!--LESS THAN | GREATER THAN--> 
     </p>
 
