--- a/Primeiros passos (HTML)/008 - Outras formatações/outras formatações.html
+++ b/Primeiros passos (HTML)/008 - Outras formatações/outras formatações.html
@@ -27,8 +27,8 @@
         segundo Einstein: <q>existem duas coisas infinitas, o universo e a estupidez humana</q></p>
     <h2>Citações Completas (direta)</h2>
     <p>Segundo Stephen Hawking:</p>
-    <blockquote cite="https://www.frasesfamosas.com.br/s-livro/uma-breve-historia-do-tempo/">Uma teoria é considerada boa se satisfaz dois requisitos: descreve de forma adequada um grande número de observações com base em um modelo que contém apenas poucos elementos arbitrários e faz previsões precisas sobre os resultados de futuras observações.</blockquote>  
+    <blockquote cite="https://www.frasesfamosas.com.br/s-livro/uma-breve-historia-do-tempo/">Uma teoria é considerada boa se satisfaz dois requisitos:<br> descreve de forma adequada um grande número de observações com base em um modelo que contém apenas poucos elementos arbitrários e faz previsões precisas sobre os resultados de futuras observações.</blockquote>  
     <h2>Abreviações</h2>
-    <p>Estou estudando <abbr title="Hyper text markup language">HTML</ab   br> e <abbr title="Cascading Style Sheets">CSS</abbr></p>
+    <p>Estou estudando <abbr title="Hyper text markup language">HTML</abbr> e <abbr title="Cascading Style Sheets">CSS</abbr></p>
 </body>
 </html>
