--- a/Primeiros passos (CSS3)/021 - modelos de cixa/caixa01.html
+++ b/Primeiros passos (CSS3)/021 - modelos de cixa/caixa01.html
@@ -9,13 +9,42 @@
         h1{
             width: 300px;
             height: 300px;
-            background-color:darkgray ;
+            background-color:darkgray;
+            border-width: 10px;
+            border-style: solid;
+            border-color: rgb(92, 92, 92);
+
+            /*padding são medidas das borda para dentro*/
+            padding-top: 10px;
+            padding-left: 10px;
+            padding-right: 5px;
+            padding-bottom: 10px;
+
+            /*margin são medidas da borda paraq fora*/
+            margin-top: 20px;
+            margin-right: 20px;
+            margin-bottom: 40px;
+            margin-left: 20px;
+
+            /* 'margin: auto;'  -------- elemento centralizado*/
         }
+        a{
+            border-width: 10px;
+            border-style: groove;
+            border-color: darkred;
+
+            padding-top: 1px;
+            padding-left: 10px;
+            padding-right: 9px;
+            padding-bottom: 3px;
+        }
+
     </style>
 </head>
 <body>
     <h1>Modelo de caixa box level</h1>
-    <p>Paragrafos tambéme são exeplos de box-level. <br>ja os <a href="#">links são exemplos de caixa inline-level</a></p>
+    <p>Paragrafos tambéme são exeplos de box-level.
+        ja os <a href="#">links são exemplos de caixa inline-level</a></p>
     
 
 </body>
