--- a/Primeiros passos (CSS3)/021 - modelos de cixa/grouping.html
+++ b/Primeiros passos (CSS3)/021 - modelos de cixa/grouping.html
@@ -42,7 +42,7 @@
             border-radius: 5px;
         }
         footer{
-            background-color: black;
+            background-color:   black;
             color: white;
             text-align: center;
         }
@@ -53,7 +53,7 @@
         footer{
             margin: 0px;
             padding: 3px;
-            color: gray;
+            color: rgb(181, 180, 180);
         }
     </style>
 </head>
