--- a/Primeiros passos (CSS3)/021 - modelos de cixa/grouping.html
+++ b/Primeiros passos (CSS3)/021 - modelos de cixa/grouping.html
@@ -20,6 +20,8 @@
         nav{
             background-color: rgb(117, 134, 164);
             width: 300px;
+            border-radius: 2px;
+            box-shadow: 1px 1px 2px 2px rgba(0, 0, 0, 0.614);
             
 
         }
@@ -40,6 +42,7 @@
             padding: 10px;
             margin: 10px;
             border-radius: 5px;
+            box-shadow: 2px 2px 3px 1px rgba(0, 0, 0, 0.676);
         }
         footer{
             background-color:   black;
@@ -52,8 +55,11 @@
         }
         footer{
             margin: 0px;
-            padding: 3px;
+            padding: 7px;
             color: rgb(181, 180, 180);
+        }
+        footer > p{
+            margin: 0px;
         }
     </style>
 </head>
@@ -75,7 +81,7 @@
         <section id="noticias">
             <article>
                 <h2>Titulo</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius molestiae ipsum laboriosam repellat aperiam aliquam vero cum fugiat, temporibus quibusdam placeat praesentium minus! Laborum enim, dolorem autem dolorum consequatur consequuntur?</p>
                 <aside>
                     <p>Escrito por: fulano</p>
                 </aside>
