--- a/Primeiros passos (CSS3)/020 - pseudoclasses/links.html
+++ b/Primeiros passos (CSS3)/020 - pseudoclasses/links.html
@@ -48,7 +48,7 @@
     </style>
 </head>
 <body>
-    <h1>personalizando links</h1>
+    <h1>Personalizando links</h1>
     <ul>
         <li> <a href="https://github.com/RuanSampaio-code"target="_black"> Meu github</a> </li>
         <li><a href="https://www.youtube.com/watch?v=vMlrcOVr7po&list=PLHz_AreHm4dlUpEXkY1AyVLQGcpSgVF8s&index=22"> Video youtube sobre esse conteudo </a></li>
