--- a/Primeiros passos (CSS3)/d10-desafiosite/texteresp.html
+++ b/Primeiros passos (CSS3)/d10-desafiosite/texteresp.html
@@ -14,7 +14,7 @@
             background-color: white;
             padding: 20px;
             margin: auto;
-            min-width: 320px ;
+            min-width: 280px ;
             max-width: 800px;
             border-radius: 10px;
         }
@@ -27,7 +27,10 @@
     <main>
         <h1>testando</h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi magni rerum voluptates, dolore mollitia iusto aspernatur similique commodi eveniet explicabo nesciunt. Accusantium debitis saepe voluptatibus vel distinctio excepturi ipsum animi.</p>
-        <img src="imagens/irina-blok.jpg" alt="">
+        <picture>
+            <source media="(max-width: 500px )" srcset="imagens/irina-blok-pq.jpg">
+            <img src="imagens/irina-blok.jpg" alt="">
+        </picture>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, accusantium. Rerum animi inventore architecto deleniti? Cupiditate explicabo doloribus ducimus similique sed obcaecati molestias vitae est nostrum voluptatibus, architecto velit inventore.</p>
     </main>
     
