--- a/Primeiros passos (CSS3)/d10-desafiosite/index.html
+++ b/Primeiros passos (CSS3)/d10-desafiosite/index.html
@@ -31,19 +31,25 @@
 
             <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <a href="https://androidcommunity.com/dan-morrill-shows-us-the-android-mascot-that-almost-was-20130103/" target="_blanck">Dan Morrill</a>. Ele conta que abriu o Inkscape (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.</p>
 
-            <img src="imagens/dan-droids.png" alt="Primeiro MAscote">
+            <picture>
+                <source media="(max-width: 700px )" srcset="imagens/dan-droids-pq.png">
+                <img src="imagens/dan-droids.png" alt="Primeiro MAscote">
+            </picture>
 
             <p>Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os Dandroids.</p>
 
             <h2>Surge um novo mascote</h2>
 
             <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa Irina Blok, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
+            <picture>
 
-            <img src="imagens/irina-blok.jpg" alt="Irina Block">
+                <source media="(max-width: 700px )" srcset="imagens/irina-blok-pq.jpg">
+                <img src="imagens/irina-blok.jpg" alt="Irina Block">
+            </picture>
 
             <p>A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o Bugdroid, o novo mascote do Android.</p>
 
-            <img src="imagens/bugdroid.png" alt="" srcset="">
+            <img class="pequena"src="imagens/bugdroid.png" alt="" srcset="">
 
             <p>A principal inspiração para os traços do novo Bugdroid veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do Google e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.</p>
 
