--- a/Primeiros passos (CSS3)/d10-desafiosite/index.html
+++ b/Primeiros passos (CSS3)/d10-desafiosite/index.html
@@ -71,7 +71,7 @@
                     <li>4.0 - Ice Cream Sandwich</li>
                     <li>4.1 - Jelly Bean</li>
                     <li>4.4 - KitKat</li>
-                    <li>5.0 - Lolipo</li>p
+                    <li>5.0 - Lolipop</li>
                     <li>6.0 - Marshmallow</li>
                     <li>7.0 - Nougat</li>
                     <li>8.0 - Oreo</li>
